# FacialClustering

./: Readme.md  clustering_chinese.py  pyproject.toml
face_detection/: face_detection_api.py  get_cropped_face.py
facenet/: feature_extractor.py
